
Improvements
------------
- reduce validation strictness for domain names (#934, !1727)

Incompatible changes
--------------------
- Removed options from declarative configuration model (YAML).  
  These are mostly experimental and debugging/testing options that are not useful for general users (remain in Lua):
  - /dnssec/refresh-time
  - /dnssec/hold-down-time
  - /dnssec/time-skew-detection
  - /logging/debugging
  - /max-workers
  - /network/tls/auto-discovery
  - /webmgmt
- Renamed/moved options in the declarative configuration model (YAML).
  - /dnssec: true|false -> /dnssec/enabled: true|false
  - /dnssec/keep-removed -> /dnssec/trust-anchors-keep-removed
  - /dnssec/trust-anchor-sentinel -> /dnssec/sentinel
  - /dnssec/trust-anchor-signal-query -> /dnssec/signal-query 
  - /network/tls/files-watchdog -> /network/tls/watchdog


Knot Resolver 6.0.15 (2025-07-17)
=================================

Security
--------
- DoS: fix a rare segfault in `resolve` function (!1717)
  Someone controlling the DNS traffic might be able
  to trigger this crash intentionally and too often.
- DoS: drop a wrong assertion/crash (!1718)
  Someone controlling the DNS traffic will most likely be able
  to trigger this crash intentionally and too often.

Bugfixes
--------
- manager: prometheus metrics update (!1703, #917, !1712)
  - added missing metrics split by IPv4 and IPv6
  - typo: resolver_answer_flags_rd_total -> resolver_answer_flag_rd_total
- /dnssec/trust-anchors-files: fix resolver startup (!1704)
- /network/edns-buffer-size: fix swapped upstream+downstream (!1711)
- cache: fix a crash in case garbage collection is too slow (!1713)
  [system] assertion "env->is_cache" failed in cdb_write
- /cache/prefill: fix 6.0.13 regression (!1705)
- datamodel: improve file permission check (#933, !1714)
- NO_CACHE flag: fix and tweak its behavior (!1715)

Improvements
------------
- update/more precise default answers for special names (!1709)