@@ -12,6 +12,7 @@ Incompatible changes
   - /dnssec/refresh-time
   - /dnssec/hold-down-time
   - /dnssec/time-skew-detection
+  - /local-data/root-fallback-addresses*
   - /logging/debugging
   - /max-workers
   - /network/tls/auto-discovery
